--- a/hyper_core/CMakeLists.txt
+++ b/hyper_core/CMakeLists.txt
@@ -5,19 +5,17 @@
 #-------------------------------------------------------------------------------------------
 set(SOURCES
         src/hyper_core/filesystem.cpp
-        src/hyper_core/logger.cpp
-        src/hyper_core/string.cpp)
+        src/hyper_core/logger.cpp)
 
 set(HEADERS
         include/hyper_core/assertion.hpp
         include/hyper_core/filesystem.hpp
         include/hyper_core/logger.hpp
-        include/hyper_core/prerequisites.hpp
-        include/hyper_core/string.hpp)
+        include/hyper_core/prerequisites.hpp)
 
 hyperengine_define_library(hyper_core)
 target_link_libraries(
         hyper_core
         PUBLIC
-        fmt
-        libassert::assert)
+        libassert::assert
+        spdlog)
