fix: take into account if no label is given

--- a/hyper_core/CMakeLists.txt
+++ b/hyper_core/CMakeLists.txt
@@ -19,5 +19,6 @@ hyperengine_define_library(hyper_core)
 target_link_libraries(
         hyper_core
         PUBLIC
+        fmt
         libassert::assert
         spdlog)
