--- a/hyper_render/CMakeLists.txt
+++ b/hyper_render/CMakeLists.txt
@@ -5,14 +5,18 @@
 #-------------------------------------------------------------------------------------------
 set(SOURCES
         src/hyper_render/camera.cpp
+        src/hyper_render/material.cpp
         src/hyper_render/mesh.cpp
+        src/hyper_render/renderable.cpp
         src/hyper_render/renderer.cpp
         src/hyper_render/render_passes/grid_pass.cpp
         src/hyper_render/render_passes/opaque_pass.cpp)
 
 set(HEADERS
         include/hyper_render/camera.hpp
+        include/hyper_render/material.hpp
         include/hyper_render/mesh.hpp
+        include/hyper_render/renderable.hpp
         include/hyper_render/renderer.hpp
         include/hyper_render/render_passes/grid_pass.hpp
         include/hyper_render/render_passes/opaque_pass.hpp)
