feat: adding imgui

--- a/hyper_render/CMakeLists.txt
+++ b/hyper_render/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES
         src/hyper_render/renderable.cpp
         src/hyper_render/renderer.cpp
         src/hyper_render/render_passes/grid_pass.cpp
+        src/hyper_render/render_passes/imgui_pass.cpp
         src/hyper_render/render_passes/opaque_pass.cpp)
 
 set(HEADERS
@@ -18,6 +19,7 @@ set(HEADERS
         include/hyper_render/renderable.hpp
         include/hyper_render/renderer.hpp
         include/hyper_render/render_passes/grid_pass.hpp
+        include/hyper_render/render_passes/imgui_pass.hpp
         include/hyper_render/render_passes/opaque_pass.hpp)
 
 hyperengine_define_library(hyper_render)
@@ -34,6 +36,7 @@ target_link_libraries(
         hyper_platform
         fastgltf
         glm
+        imgui
         meshoptimizer
         stb)
 
