--- a/hyper_rhi/CMakeLists.txt
+++ b/hyper_rhi/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SOURCES
         src/hyper_rhi/vulkan/vulkan_compute_pipeline.cpp
         src/hyper_rhi/vulkan/vulkan_descriptor_manager.cpp
         src/hyper_rhi/vulkan/vulkan_graphics_device.cpp
+        src/hyper_rhi/vulkan/vulkan_imgui_manager.cpp
         src/hyper_rhi/vulkan/vulkan_pipeline_layout.cpp
         src/hyper_rhi/vulkan/vulkan_render_pass.cpp
         src/hyper_rhi/vulkan/vulkan_render_pipeline.cpp
@@ -19,8 +20,7 @@ set(SOURCES
         src/hyper_rhi/vulkan/vulkan_shader_module.cpp
         src/hyper_rhi/vulkan/vulkan_surface.cpp
         src/hyper_rhi/vulkan/vulkan_texture.cpp
-        src/hyper_rhi/vulkan/vulkan_texture_view.cpp
-)
+        src/hyper_rhi/vulkan/vulkan_texture_view.cpp)
 
 set(HEADERS
         include/hyper_rhi/buffer.hpp
@@ -28,6 +28,7 @@ set(HEADERS
         include/hyper_rhi/compute_pass.hpp
         include/hyper_rhi/compute_pipeline.hpp
         include/hyper_rhi/graphics_device.hpp
+        include/hyper_rhi/imgui_manager.hpp
         include/hyper_rhi/pass.hpp
         include/hyper_rhi/pipeline_layout.hpp
         include/hyper_rhi/render_pass.hpp
@@ -47,6 +48,7 @@ set(HEADERS
         include/hyper_rhi/vulkan/vulkan_compute_pipeline.hpp
         include/hyper_rhi/vulkan/vulkan_descriptor_manager.hpp
         include/hyper_rhi/vulkan/vulkan_graphics_device.hpp
+        include/hyper_rhi/vulkan/vulkan_imgui_manager.hpp
         include/hyper_rhi/vulkan/vulkan_pipeline_layout.hpp
         include/hyper_rhi/vulkan/vulkan_render_pass.hpp
         include/hyper_rhi/vulkan/vulkan_render_pipeline.hpp
@@ -54,8 +56,7 @@ set(HEADERS
         include/hyper_rhi/vulkan/vulkan_shader_module.hpp
         include/hyper_rhi/vulkan/vulkan_surface.hpp
         include/hyper_rhi/vulkan/vulkan_texture.hpp
-        include/hyper_rhi/vulkan/vulkan_texture_view.hpp
-)
+        include/hyper_rhi/vulkan/vulkan_texture_view.hpp)
 
 if (WIN32)
     set(SOURCES
@@ -79,6 +80,7 @@ target_link_libraries(
         DirectXShaderCompiler
         fmt
         glfw
+        imgui
         volk
         VulkanMemoryAllocator)
 
