--- a/hyper_event/CMakeLists.txt
+++ b/hyper_event/CMakeLists.txt
@@ -7,7 +7,9 @@ set(SOURCES
         src/hyper_event/event_bus.cpp)
 
 set(HEADERS
-        include/hyper_event/event_bus.hpp)
+        include/hyper_event/event_bus.hpp
+        include/hyper_event/event_handler.hpp
+        include/hyper_event/event_id_generator.hpp)
 
 hyperengine_define_library(hyper_event)
 target_link_libraries(
