chore: remove imgui.ini

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ CMakeUserPresets.json
 # Third party files
 #-------------------------------------------------------------------------------------------
 third_party/DirectXShaderCompiler/
+
+#-------------------------------------------------------------------------------------------
+# ImGui
+#-------------------------------------------------------------------------------------------
+imgui.ini
