feat: add engine loop and modules with globals

--- a/hyper_event/CMakeLists.txt
+++ b/hyper_event/CMakeLists.txt
@@ -4,12 +4,13 @@
 # SPDX-License-Identifier: MIT
 #-------------------------------------------------------------------------------------------
 set(SOURCES
-        src/hyper_event/event_bus.cpp)
+        src/hyper_event/hyper_event.cpp)
 
 set(HEADERS
         include/hyper_event/event_bus.hpp
         include/hyper_event/event_handler.hpp
-        include/hyper_event/event_id_generator.hpp)
+        include/hyper_event/event_id_generator.hpp
+        include/hyper_event/hyper_event.hpp)
 
 hyperengine_define_library(hyper_event)
 target_link_libraries(
