--- a/hyper_engine/CMakeLists.txt
+++ b/hyper_engine/CMakeLists.txt
@@ -5,10 +5,15 @@
 #-------------------------------------------------------------------------------------------
 set(SOURCES
         src/main.cpp
-        src/hyper_engine/engine.cpp)
+        src/hyper_engine/editor_engine.cpp
+        src/hyper_engine/engine_loop.cpp
+        src/hyper_engine/game_engine.cpp)
 
 set(HEADERS
-        include/hyper_engine/engine.hpp)
+        include/hyper_engine/editor_engine.hpp
+        include/hyper_engine/engine.hpp
+        include/hyper_engine/engine_loop.hpp
+        include/hyper_engine/game_engine.hpp)
 
 hyperengine_define_executable(hyper_engine)
 target_link_libraries(
