--- a/hyper_core/CMakeLists.txt
+++ b/hyper_core/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCES
         src/hyper_core/filesystem.cpp
         src/hyper_core/global_environment.cpp
         src/hyper_core/hyper_core.cpp
+        src/hyper_core/job_system.cpp
         src/hyper_core/logger.cpp
         src/hyper_core/string.cpp)
 
@@ -16,11 +17,13 @@ set(HEADERS
         include/hyper_core/filesystem.hpp
         include/hyper_core/global_environment.hpp
         include/hyper_core/hyper_core.hpp
+        include/hyper_core/job_system.hpp
         include/hyper_core/logger.hpp
         include/hyper_core/math.hpp
         include/hyper_core/module.hpp
         include/hyper_core/prerequisites.hpp
-        include/hyper_core/string.hpp)
+        include/hyper_core/string.hpp
+        include/hyper_core/thread_safe_ring_buffer.hpp)
 
 hyperengine_define_library(hyper_core)
 target_link_libraries(
