feat: add scene rendering

--- a/hyper_engine/CMakeLists.txt
+++ b/hyper_engine/CMakeLists.txt
@@ -5,11 +5,14 @@
 #-------------------------------------------------------------------------------------------
 set(SOURCES
         src/main.cpp
+        src/hyper_engine/camera.cpp
         src/hyper_engine/editor_engine.cpp
+        src/hyper_engine/engine.cpp
         src/hyper_engine/engine_loop.cpp
         src/hyper_engine/game_engine.cpp)
 
 set(HEADERS
+        include/hyper_engine/camera.hpp
         include/hyper_engine/editor_engine.hpp
         include/hyper_engine/engine.hpp
         include/hyper_engine/engine_loop.hpp
@@ -20,6 +23,7 @@ target_link_libraries(
         hyper_engine
         PRIVATE
         hyper_core
+        hyper_ecs
         hyper_platform
         hyper_rhi
         hyper_render
