--- a/hyper_render/CMakeLists.txt
+++ b/hyper_render/CMakeLists.txt
@@ -4,12 +4,12 @@
 # SPDX-License-Identifier: MIT
 #-------------------------------------------------------------------------------------------
 set(SOURCES
-        src/hyper_render/camera.cpp
         src/hyper_render/hyper_render.cpp
         src/hyper_render/material.cpp
         src/hyper_render/mesh.cpp
         src/hyper_render/renderable.cpp
         src/hyper_render/renderer.cpp
+        src/hyper_render/scene.cpp
         src/hyper_render/render_passes/grid_pass.cpp
         src/hyper_render/render_passes/opaque_pass.cpp)
 
@@ -21,6 +21,7 @@ set(HEADERS
         include/hyper_render/mesh.hpp
         include/hyper_render/renderable.hpp
         include/hyper_render/renderer.hpp
+        include/hyper_render/scene.hpp
         include/hyper_render/render_passes/grid_pass.hpp
         include/hyper_render/render_passes/opaque_pass.hpp)
 
@@ -33,9 +34,11 @@ target_link_libraries(
         hyper_render
         PUBLIC
         hyper_core
+        hyper_ecs
         hyper_event
         hyper_rhi
         hyper_platform
+        EnTT::EnTT
         fastgltf
         glm
         imgui
