--- a/hyper_ecs/CMakeLists.txt
+++ b/hyper_ecs/CMakeLists.txt
@@ -3,17 +3,15 @@
 #
 # SPDX-License-Identifier: MIT
 #-------------------------------------------------------------------------------------------
-set(SOURCES
-        src/hyper_ecs/hyper_ecs.cpp)
+set(SOURCES)
 
 set(HEADERS
-        include/hyper_ecs/hyper_ecs.hpp
         include/hyper_ecs/model_component.hpp
         include/hyper_ecs/transform_component.hpp)
 
 hyperengine_define_library(hyper_ecs)
 target_link_libraries(
         hyper_ecs
-        PUBLIC
+        INTERFACE
         hyper_core)
 
