--- a/hyper_event/CMakeLists.txt
+++ b/hyper_event/CMakeLists.txt
@@ -3,17 +3,15 @@
 #
 # SPDX-License-Identifier: MIT
 #-------------------------------------------------------------------------------------------
-set(SOURCES
-        src/hyper_event/hyper_event.cpp)
+set(SOURCES)
 
 set(HEADERS
         include/hyper_event/event_bus.hpp
         include/hyper_event/event_handler.hpp
-        include/hyper_event/event_id_generator.hpp
-        include/hyper_event/hyper_event.hpp)
+        include/hyper_event/event_id_generator.hpp)
 
 hyperengine_define_library(hyper_event)
 target_link_libraries(
         hyper_event
-        PUBLIC
+        INTERFACE
         hyper_core)
